--- a/index.html
+++ b/index.html
@@ -27,8 +27,16 @@
       <div class="spinner"><img src="client/images/spiffygif_46x46.gif"></div>
       <div id="rooms">
         Room:
-        <select></select>
-        <button>Add Room</button>
+        <select>
+          <option value=Lobby>Lobby</option>
+          <option value=Testing>Testing</option>
+        </select>
+        <!-- Need to add a form and text input. -->
+        <!-- After adding the room we need to add it as an option to <select> -->
+          <form action="#" method="post">
+            <input type="text" name="roomname" id="roomname">
+          </form>
+        <button class="button">Add Room</button>
       </div>
       <form action="#" id="send" method="post">
         <input type="text" name="message" id="message"/>
