--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
       <div id="rooms">
         Room:
         <select>
-          <option value=Lobby>Lobby</option>
-          <option value=Testing>Testing</option>
+          <option value=''>-Select Room-</option>
         </select>
         <!-- Need to add a form and text input. -->
         <!-- After adding the room we need to add it as an option to <select> -->
