Complete Bare Minimum Requirements

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <form action="#" method="post">
             <input type="text" name="roomname" id="roomname">
           </form>
-        <button class="button">Add Room</button>
+        <button type="button" class="button">Add Room</button>
       </div>
       <form action="#" id="send" method="post">
         <input type="text" name="message" id="message"/>
